# timerep

./: .gitignore  CHANGELOG.md  Makefile  README.md  cabal.project  flake.nix  hie.yaml  relative-time.cabal  stack.yaml  stack_lts-18.yaml  stack_nightly.yaml  timerep.cabal
.github/workflows/: cabal.yaml  cabal_8-10.yaml  cabal_9-0.yaml  cabal_9-2.yaml  ci.yaml  ghc_8-10-7.yaml  ghc_8-10.yaml  ghc_9-0-2.yaml  ghc_9-0.yaml  ghc_9-2-2.yaml  ghc_9-2.yaml  nix.yaml  nix_ci.yaml  stack.yaml  stack_lts-18.yaml  stack_lts-19.yaml  stack_nightly.yaml  style.yaml  style_ci.yaml
docs/: Data-Time-Relative.html  doc-index.html  doc-index.json  index.html  relative-time.haddock
docs/src/: Data.Time.Relative.html
nix/: ghc_base.nix  stack.nix  stack_base.nix
src/Data/: TimeRep.hs
src/Data/Time/: Relative.hs
test/doctest/: Main.hs
test/unit/: Main.hs
test/unit/Unit/: MaxRuns.hs
test/unit/Unit/Data/Time/: Relative.hs
tools/: format.sh  haddock.sh  lint-refactor.sh  lint.sh
