cabal-version:      2.4
name:               relative-time
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.2
copyright:          2022 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@prontonmail.com
homepage:           https://github.com/tbidne/relative-time/
bug-reports:        https://github.com/tbidne/relative-time/issues
synopsis:           Template
description:        Template
category:           Template
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/relative-time

common common-exts
  default-extensions:
    ApplicativeDo
    DeriveAnyClass
    DeriveDataTypeable
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    TypeApplications

library
  import:           common-exts
  exposed-modules:  Data.Time.Relative
  build-depends:
    , algebra-simple  ^>=0.1
    , base            >=4.14.0.0 && <4.17
    , deepseq         ^>=1.4.4.0

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite doctest
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , doctest  >=0.16.3 && <0.21

  hs-source-dirs:   test/doctest
  default-language: Haskell2010
