cabal-version:      2.4
name:               relative-time
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.6 || ==9.6.2

copyright:          2022-2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/relative-time/
bug-reports:        https://github.com/tbidne/relative-time/issues
synopsis:           Defines a type for relative time with second precision.
description:
  Provides the 'Data.Time.RelativeTime' type, which is used to define a
  relative time in terms of days, hours, minutes, and seconds.

category:           Time
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/relative-time

common common-lang
  default-extensions:
    ApplicativeDo
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    GADTs
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    StandaloneKindSignatures
    TypeApplications
    TypeOperators

library
  import:           common-lang
  exposed-modules:  Data.Time.Relative
  build-depends:
    , algebra-simple  ^>=0.1
    , base            >=4.14.0.0 && <4.19
    , bounds          ^>=0.1
    , deepseq         >=1.4.4.0  && <1.6
    , optics-core     ^>=0.4

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite doctest
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , doctest    >=0.16.3 && <0.23
    , env-guard  ^>=0.2

  hs-source-dirs:   test/doctest
  default-language: Haskell2010

test-suite unit
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    Unit.Data.Time.Relative
  build-depends:
    , algebra-simple
    , base
    , hedgehog        >=1.0.2   && <1.5
    , relative-time
    , tasty           >=1.1.0.3 && <1.5
    , tasty-hedgehog  >=1.2.0   && <1.5
    , tasty-hunit     >=0.9     && <0.11

  hs-source-dirs:   test/unit
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: Haskell2010
