cabal-version:      2.4
name:               timerep
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.2
copyright:          2022 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@prontonmail.com
homepage:           https://github.com/tbidne/timerep/
bug-reports:        https://github.com/tbidne/timerep/issues
synopsis:           Template
description:        Template
category:           Template
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/timerep

library
  exposed-modules:  Data.TimeRep
  build-depends:
    , algebra-simple  ^>=0.1
    , base            >=4.14.0.0 && <4.17
    , deepseq         ^>=1.4.4.0

  hs-source-dirs:   src
  default-language: Haskell2010
